syntax = "proto3";

package community.v1;

import "community/v1/requests.proto";
import "community/v1/messages.proto";
import "community/v1/queries.proto";

service CommunityService {
  rpc CreateCommunity (CreateCommunityRequest)
      returns (CommunityResponse);

  rpc UpdateCommunity (UpdateCommunityRequest)
      returns (CommunityResponse);

  rpc DeleteCommunity (DeleteCommunityRequest)
      returns (DeleteCommunityResponse);

  rpc GetAllCommunities (GetAllCommunitiesRequest)
      returns (GetAllCommunitiesResponse);
}
