syntax = "proto3";

package community.v1;

enum CommunityVisibility {
  COMMUNITY_VISIBILITY_UNSPECIFIED = 0;
  COMMUNITY_VISIBILITY_PUBLIC = 1;
  COMMUNITY_VISIBILITY_RESTRICTED = 2;
  COMMUNITY_VISIBILITY_PRIVATE = 3;
}

enum CommunityStatus {
  COMMUNITY_STATUS_UNSPECIFIED = 0;
  COMMUNITY_STATUS_ACTIVE = 1;
  COMMUNITY_STATUS_SUSPENDED = 2;
  COMMUNITY_STATUS_ARCHIVED = 3;
}

enum MediaAction {
  MEDIA_ACTION_UNSPECIFIED = 0;
  MEDIA_ACTION_KEEP = 1;
  MEDIA_ACTION_UPDATE = 2;
  MEDIA_ACTION_DELETE = 3;
}


enum CommunityModeratorRole {
  COMMUNITY_MODERATOR_ROLE_UNSPECIFIED = 0;
  COMMUNITY_MODERATOR_ROLE_MODERATOR = 1;
  COMMUNITY_MODERATOR_ROLE_OWNER = 2;
}

enum CommunityModeratorStatus {
  COMMUNITY_MODERATOR_STATUS_UNSPECIFIED = 0;
  COMMUNITY_MODERATOR_STATUS_INVITED = 1;
  COMMUNITY_MODERATOR_STATUS_ACTIVE = 2;
  COMMUNITY_MODERATOR_STATUS_REJECTED = 3;
  COMMUNITY_MODERATOR_STATUS_REMOVED = 4;
}

enum CommunityMemberStatus {
  COMMUNITY_MEMBER_STATUS_UNSPECIFIED = 0;
  COMMUNITY_MEMBER_STATUS_PENDING = 1;
  COMMUNITY_MEMBER_STATUS_ACTIVE = 2;
  COMMUNITY_MEMBER_STATUS_BANNED = 3;
}