syntax = "proto3";

package community.v1;

import "community/v1/messages.proto";

message GetAllCommunitiesRequest {
  int32 limit = 1;
  optional Cursor cursor = 2;
}

message GetAllCommunitiesResponse {
  repeated CommunitySummary communities = 1;
  optional Cursor nextCursor = 2;
}

